<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="word_separators">.	 ,;:!?\n()[]*&amp;@{}/&lt;>_+=|\"</string>
    <string name="sentence_separators">.,!?</string>
    <string name="suggested_punctuations">!?,@_</string>
    <string name="alternates_for_d" />
    <string name="alternates_for_r" />
    <string name="alternates_for_t" />
    <string name="alternates_for_z" />
    <string name="alternates_for_l" />
    <string name="alternates_for_g" />
    <string name="ime_name">谷歌拼音输入法</string>
    <string name="ime_settings_activity_name">谷歌拼音输入法设置</string>
    <string name="ime_settings_choose_other_ime">输入法</string>
    <string name="version">1.3.4 MOD v3 by @rainux</string>
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_enter_go">6</string>
    <string name="toggle_enter_search">7</string>
    <string name="toggle_enter_send">8</string>
    <string name="toggle_enter_next">9</string>
    <string name="toggle_enter_done">10</string>
    <string name="toggle_row_cn">11</string>
    <string name="toggle_row_en">12</string>
    <string name="toggle_row_uri">13</string>
    <string name="toggle_row_emailaddress">14</string>
    <string name="toggle_phone_sym">15</string>
    <string name="toggle_stroke_urlqwerty">16</string>
    <string name="toggle_misc1">17</string>
    <string name="toggle_misc2">18</string>
    <string name="toggle_misc3">19</string>
    <string name="toggle_misc4">20</string>
    <string name="toggle_smiley_off">21</string>
    <string name="toggle_smiley_on">22</string>
    <string name="toggle_cn_sym1">23</string>
    <string name="toggle_cn_sym2">24</string>
    <string name="toggle_url">25</string>
    <string name="toggle_emailaddress">26</string>
    <string name="toggle_stroke_disabled">27</string>
    <string name="toggle_exit_sym_to_en">28</string>
    <string name="toggle_en_upper_locked">29</string>
    <string name="toggle_single_quote_open">30</string>
    <string name="toggle_single_quote_close">31</string>
    <string name="toggle_double_quote_open">32</string>
    <string name="toggle_double_quote_close">33</string>
    <string name="setting_stroke_key">setting_stroke_key</string>
    <string name="setting_fault_tolerance_key">setting_fault_key</string>
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_chinese_key">setting_prediction_chinese_key</string>
    <string name="setting_prediction_english_key">setting_prediction_english_key</string>
    <string name="setting_spell_correction_key">setting_spell_correction_key</string>
    <string name="setting_auto_capitalization_key">setting_auto_capitalization_key</string>
    <string name="setting_tradition_key">setting_tradition_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>
    <string name="setting">谷歌拼音输入法设置</string>
    <string name="setting_stroke_title">笔画输入</string>
    <string name="setting_fault_tolerance_title">笔画容错</string>
    <string name="setting_sound_key_title">按键声音</string>
    <string name="setting_vibrate_title">按键震动</string>
    <string name="setting_prediction_chinese_title">中文联想输入</string>
    <string name="setting_prediction_english_title">英文预测提示</string>
    <string name="setting_spell_correction_title">自动拼写更正</string>
    <string name="setting_auto_capitalization_title">自动大写</string>
    <string name="setting_tradition_title">繁体输入</string>
    <string name="setting_switch_title">中英文切换</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>
    <string name="setting_enabled">开启</string>
    <string name="setting_disabled">关闭</string>
    <string name="setting_others">其它设置</string>
    <string name="setting_others_summary">词典同步等</string>
    <string name="account_label_username">帐号: (例如 johndoe@gmail.com)</string>
    <string name="account_label_password">密码:</string>
    <string name="account_label_login">登录</string>
    <string name="account_label_cancel">取消</string>
    <string name="account_title">用户登录</string>
    <string name="account_sign_up_title">注册新用户</string>
    <string name="account_signing_in_title">正在登录，请稍等...</string>
    <string name="setting_title">谷歌拼音输入法设置</string>
    <string name="setting_update_category_key">setting_update_category_key</string>
    <string name="setting_update_category_title">词典自动更新</string>
    <string name="setting_update_enabled_key">setting_update_enabled_key</string>
    <string name="setting_update_enabled_title">词典自动更新</string>
    <string name="setting_sync_category_title">用户词典同步</string>
    <string name="setting_sync_enabled_key">setting_sync_enabled_key</string>
    <string name="setting_sync_now_key">setting_sync_now_key</string>
    <string name="setting_sync_clear_key">setting_sync_clear_key</string>
    <string name="setting_sync_enabled_title">同步用户词典</string>
    <string name="setting_sync_now_title">现在同步</string>
    <string name="setting_sync_cancel_title">取消同步</string>
    <string name="setting_sync_clear_title">清空服务器词典</string>
    <string name="setting_enabled_title">开启</string>
    <string name="setting_disabled_title">关闭</string>
    <string name="status_bar_message_title">谷歌拼音输入法</string>
    <string name="status_bar_message_sync_title">正在同步用户词典...</string>
    <string name="status_bar_message_update_title">正在下载热门词汇...</string>
    <string name="setting_dialog_sync_now_title">询问</string>
    <string name="setting_dialog_sync_now_message">要现在进行同步吗？</string>
    <string name="setting_dialog_sync_clear_title">注意</string>
    <string name="setting_dialog_sync_clear_message">服务器端用户词典将被清空，且该操作不可逆。真的要清空服务器上保留的用户词典吗？如果是，请输入如下数字并点击确定。</string>
    <string name="setting_error_sync_service_inactive">系统服务未启用，无法完成操作。</string>
    <string name="sign_up_url">https://www.google.com/accounts/NewAccount?hl=zh_CN</string>
    <string name="setting_update_time">上次更新:</string>
    <string name="setting_sync_time">上次同步:</string>
    <string name="setting_year">年</string>
    <string name="setting_month">月</string>
    <string name="setting_day">日</string>
    <string name="setting_hour">时</string>
    <string name="setting_minute">分</string>
    <string name="setting_second">秒</string>
    <string name="setting_sync_error">同步失败</string>
    <string name="setting_sync_ongoing">正在同步...</string>
    <string name="setting_sync_authentication_failed">抱歉，您的用户名和密码不匹配，请重试。</string>
    <string name="setting_update_error">更新失败</string>
    <string name="setting_update_ongoing">正在更新...</string>
    <string name="privacy_url">http://m.google.com/static/zh-CN/privacy.html</string>
    <string name="tos_url">http://m.google.com/tospage?dc=gorganic&amp;hl=zh_CN</string>
    <string name="setting_privacy_key">setting_privacy_key</string>
    <string name="setting_tos_key">setting_tos_key</string>
    <string name="setting_about_key">setting_about_key</string>
    <string name="setting_privacy_title">隐私政策</string>
    <string name="setting_tos_title">服务条款</string>
    <string name="setting_about_title">关于</string>
    <string name="setting_about_version_title">当前版本：</string>
    <string name="setting_about_loading_title">正在加载…</string>
    <string name="touch_to_continue">继续 »</string>
    <string name="touch_to_finish">开如输入 »</string>
    <string name="tip_to_open_keyboard"><b>点击输入框打开输入法软键盘，\n长按输入框可以切换到其它输入法。</b></string>
    <string name="tip_to_view_accents"><b>点击这里切换中英文输入。</b></string>
    <string name="tip_to_open_symbols"><b>点击这里输入数字和标点符号。</b></string>
    <string name="tip_to_close_symbols"><b>再次点击这里可以回到原来的输入模式。</b></string>
    <string name="tip_to_launch_settings"><b>长按这里打开输入法选项，\n或切换到其它输入法。</b></string>
    <string name="tip_to_select_candidate"><b>点击候选字或使用空格进行选择。</b></string>
    <string name="tip_to_backspace"><b>点击这里清除候选字列表。</b></string>
    <string name="tip_to_smart_key"><b>这里依输入环境不同而显示不同的操作。</b></string>
    <string name="tip_to_start_typing"><b>帮助结束!</b></string>
    <string name="default_device_name">Android</string>
    <string name="next_button_label">下一步</string>
    <string name="back_button_label">返回</string>
    <string name="skip_button_label">略过</string>
    <string name="done_button_label">完成</string>
    <string name="keyboard_tutorial_title">使用屏幕键盘</string>
    <string name="open_the_keyboard"><b><font size="17">打开键盘\n</font></b><font size="3">\n</font>触摸任意文本字段。</string>
    <string name="close_the_keyboard"><b><font size="17">关闭键盘\n</font></b><font size="3">\n</font>按“返回”键。</string>
    <string name="sync"><b><font size="17">同步用户词典\n</font></b><font size="3">\n</font>在键盘设置中开启或关闭用户词典同步功能。</string>
    <string name="keyboard_settings"><b><font size="17">键盘设置\n</font></b><font size="3">\n</font>触摸并按住 <b>?123</b> 键。</string>
</resources>
