<?xml version="1.0" encoding="UTF-8"?>
<skb_template skb_bg="@drawable/skb_bg" key_xmargin="0.316%p" key_ymargin="0.550%p" balloon_bg="@drawable/key_balloon_bg" popup_bg="@drawable/miniskb_bg" color="@color/label_color" color_highlight="@color/label_color" color_balloon="@color/balloon_color">
    <key_type id="0" bg="@drawable/normal_key_bg" hlbg="@drawable/normal_key_hl_bg" color_highlight="@color/label_color_hl0" />
    <key_type id="1" bg="@drawable/normal_key_bg" hlbg="@drawable/normal_key_hl_bg" />
    <key_type id="2" bg="@drawable/light_key_bg" hlbg="@drawable/light_key_hl_bg" />
    <key_type id="3" bg="@drawable/light_key_up_bg" hlbg="@drawable/light_key_up_hl_bg" />
    <key_type id="4" />
    <key_type id="5" bg="@drawable/normal_key_bg" hlbg="@drawable/normal_key_hl_bg" color_highlight="@color/label_color_hl0" />
    <key_icon code="66" icon="@drawable/enter_icon" icon_popup="@drawable/enter_popup_icon" />
    <key_icon code="62" icon="@drawable/space_icon" icon_popup="@drawable/space_popup_icon" />
    <key_icon code="67" icon="@drawable/delete_icon" icon_popup="@drawable/delete_popup_icon" />
    <key id="1" start_pos_x="82.188%p" start_pos_y="66.667%p" width="16.876%p" height="33.334%p" code="66" key_type="1">
        <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66" />
        <toggle_state state_id="@string/toggle_enter_search" code="66" icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon" />
        <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66" />
        <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66" />
        <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66" />
        <toggle_state state_id="@string/toggle_smiley_off" code="-6" key_type="2" repeat="true" icon="@drawable/smiley_icon" icon_popup="@drawable/smiley_popup_icon" />
        <toggle_state state_id="@string/toggle_smiley_on" code="-6" key_type="3" repeat="true" icon="@drawable/smiley_icon" icon_popup="@drawable/smiley_popup_icon" />
    </key>
    <key id="2" start_pos_x="82.188%p" start_pos_y="33.334%p" width="16.876%p" height="33.334%p" code="67" key_type="1" repeat="true" />
    <key id="3" start_pos_x="40%p" start_pos_y="66.667%p" width="20%p" height="33.334%p" code="62" repeat="true" />
</skb_template>