<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/setupWizardTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/keyboard_tutorial_title" />
                <View android:layout_gravity="center" android:background="@drawable/green_divider" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="14.0dip" />
                <TextView android:textAppearance="@style/setupWizardTextPrimarySmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="14.0dip" android:text="@string/open_the_keyboard" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="14.0dip" android:src="@drawable/kb_tutorial_open" />
                <TextView android:textAppearance="@style/setupWizardTextPrimarySmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="28.0dip" android:text="@string/close_the_keyboard" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="14.0dip" android:src="@drawable/kb_tutorial_close" />
                <TextView android:textAppearance="@style/setupWizardTextPrimarySmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="28.0dip" android:text="@string/keyboard_settings" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="14.0dip" android:src="@drawable/kb_tutorial_settings" />
                <TextView android:textAppearance="@style/setupWizardTextPrimarySmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="28.0dip" android:text="@string/sync" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="14.0dip" android:src="@drawable/tutorial_sync" />
                <View android:layout_width="fill_parent" android:layout_height="40.0dip" />
            </LinearLayout>
        </ScrollView>
        <RelativeLayout android:id="@id/help_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/hand_image_view" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/hand_anim" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout android:background="@android:drawable/bottom_bar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/back_button" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/back_button_label" android:drawableLeft="@drawable/ic_btn_back" android:drawablePadding="3.0dip" android:layout_alignParentLeft="true" />
        <Button android:id="@id/next_button" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/next_button_label" android:drawableRight="@drawable/ic_btn_next" android:drawablePadding="10.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>