<?xml version="1.0" encoding="UTF-8"?>
<keyboard skb_template="@xml/skb_template1" skb_cache_flag="true" qwerty="true" qwerty_uppercase="true" width="10%p" height="25%p" key_type="0" repeat="false" balloon="true">
    <row>
        <keys splitter="|" labels="Q|W|E|R|T|Y|U|I|O|P" codes="45|51|33|46|48|53|49|37|43|44" />
    </row>
    <row start_pos_x="4.078%p" width="10.205%p">
        <keys splitter="|" labels="A|S|D|F|G|H|J|K|L" codes="29|47|32|34|35|36|38|39|40" />
    </row>
    <row width="10.205%p">
        <key id="21" key_type="1" />
        <keys splitter="|" labels="Z|X|C|V|B|N|M" codes="54|52|31|50|30|42|41" />
        <key id="3" />
    </row>
    <row width="20%p" row_id="@string/toggle_row_cn">
        <key id="15" />
        <key id="18" />
        <key label="，" width="10.205%p" icon="@drawable/comma_full_icon" icon_popup="@drawable/comma_full_popup_icon" />
        <key code="62" key_type="5" width="22.446%p" icon="@drawable/space_icon" icon_popup="@drawable/space_popup_icon" />
        <key label="。" width="10.205%p" icon="@drawable/period_full_icon" icon_popup="@drawable/period_full_popup_icon" />
        <key id="19" />
        <key id="20" />
    </row>
    <row width="20%p" row_id="@string/toggle_row_en" start_pos_y="75%p">
        <key id="15" />
        <key id="18" />
        <key label="," width="10.205%p" />
        <key code="62" key_type="5" width="22.446%p" icon="@drawable/space_icon" icon_popup="@drawable/space_popup_icon" />
        <key label="." width="10.205%p" />
        <key id="19" />
        <key id="20" />
    </row>
    <row width="20%p" row_id="@string/toggle_row_uri" start_pos_y="75%p">
        <key id="15" />
        <key id="18" />
        <key label="/" width="10.205%p" />
        <key id="22" />
        <key label="." width="10.205%p" />
        <key id="19" />
        <key id="20" />
    </row>
    <row width="20%p" row_id="@string/toggle_row_emailaddress" start_pos_y="75%p">
        <key id="15" />
        <key id="18" />
        <key label="\@" width="10.205%p" />
        <key id="22" />
        <key label="." width="10.205%p" />
        <key id="19" />
        <key id="20" key_type="1" />
    </row>
</keyboard>